--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,12 @@ services:
         build: RecipeApp
         ports:
             - 8082:80
+    recipe-app-db:
+        image: postgres
+        environment:
+            - POSTGRES_DB=RecipeApp
+            - POSTGRES_PASSWORD=password
+        volumes:
+            - ./RecipeApp/postgres/data:/var/lib/postgresql/data
+        ports:
+            - 7072:5432
