--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
   },
   "homepage": "https://github.com/mwg2202/ProfessionalWebsite#readme",
   "devDependencies": {
-    "css-loader": "^4.2.1",
-    "html-webpack-plugin": "^4.3.0",
+    "copy-webpack-plugin": "^6.1.0",
+    "css-loader": "^4.2.2",
+    "html-webpack-plugin": "^4.4.1",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
-  }
+  },
+  "dependencies": {}
 }
