--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,15 +13,11 @@ services:
         build: RecipeApp
         ports:
             - 8082:80
-    recipe-app-db:
+    recipe-db:
         image: postgres
-        environment:
-            - POSTGRES_DB=RecipeApp
-            - POSTGRES_PASSWORD=password
-        volumes:
-            - ./RecipeApp/postgres/data:/var/lib/postgresql/data
         ports:
-            - 7072:5432
+            - 5432:5432
+
     pde-solver:
         build: PDESolver
         ports:
